# rag_system_demo

./: .env  .env.example  README.md  pyproject.toml
config/: config.yaml
data/: app.db  store.json
data/chroma/: chroma.sqlite3
data/documents/: test.txt
docs/: ARCHITECTURE.md  CHANGELOG_DEBUG.md  EVALUATION.md  TESTING.md  THESIS_WRITING.md  修改记录与错误修复日志.md  架构与实现说明.md  测试说明.md  目录结构说明（论文用）.md  论文修改及流程图生成.md  论文写作素材.md  评估说明.md
models/bge-reranker-base/: .gitattributes  configuration.json
rag_demo/: __main__.py
rag_demo/agents/: agno_team.py
rag_demo/api/: main.py  sse.py
rag_demo/core/: config_loader.py  provider_settings.py  singleton.py
rag_demo/eval/: eval_rag.py
rag_demo/parsing/: doc_parser.py  vision_api.py
rag_demo/rag/: embedding_rerank.py  milvus_store.py  rag_system.py  siliconflow_embedding.py  siliconflow_rerank.py  types.py
rag_demo/storage/: database.py  db.py  models.py  store.py
src/: agent.py  config_loader.py  doc_parser.py  eval_rag.py  evaluator.py  main.py  rag_system.py  siliconflow_embedding.py  siliconflow_rerank.py  store.py  vision_api.py
static/: index.html  settings.html
tests/: __init__.py  conftest.py  helpers.py  test.env  test.env.example  test_e2e_rag.py  test_rag_evaluate.py
tests/text/: legal_sample.txt  medical_sample.txt  mixed_sample.txt
text/: ARCHITECTURE.md  CHANGELOG_DEBUG.md
