[project]
name = "rag-system"
version = "0.2.0"
description = "企业数据管理秘书 RAG（全在线：硅基流动 + Ollama）"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "langgraph>=0.6.7",
    "llama-index>=0.14.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-faiss>=0.5.1",
    "numpy>=1.24.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.11.7",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
