[project]
name = "rag-system"
version = "0.4.0"
description = "企业数据管理秘书 RAG（Milvus + PostgreSQL + 硅基流动 + Agno Team）"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.5.0",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "llama-index>=0.14.0",
    "llama-index-embeddings-openai>=0.2.0",
    "numpy>=1.24.0",
    "opendataloader-pdf>=2.0.0",
    "pymilvus>=2.4.0,<2.5",
    "pymupdf>=1.24.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "rank-bm25>=0.2.2",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.35.0",
    "jieba>=0.42.1",
]

[tool.uv]
# pymilvus 2.4 声明的 grpcio==1.60 在 Python 3.13 上常无 wheel 且构建需旧 setuptools；放宽以使用带 wheel 的新版 grpcio。
override-dependencies = ["grpcio>=1.66.0,<2"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: 需要 PostgreSQL、Milvus、SILICONFLOW_API_KEY 与网络",
    "slow: 较慢（含嵌入/大模型）",
]
